United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7016112 CMS: crash during promotion testing
7016112 : CMS: crash during promotion testing

Details
Type:
Bug
Submit Date:
2011-01-31
Status:
Closed
Updated Date:
2011-11-25
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
windows
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
jdk7b124 crashed during promotion testing in CMS thread
...

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/04760e41b01e
                                     
2011-07-08
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/04760e41b01e
                                     
2011-07-08
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/04760e41b01e
                                     
2011-06-30
SUGGESTED FIX

I implemented my own quicksort that does a full 32/64 bit swap instead of byte-by-byte swap. 

I ran this for 65 hours on my wokstations without a crash.

On my laptop I ran it for for 66 hours straight. This build has the extra fix that sorts each method array 2000 times. With the stdlib:qsort() this crashes within 1 minute.
                                     
2011-06-13



Hardware and Software, Engineered to Work Together